# product_search

./: .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  NEXT_SESSION.md  PLAN.md  README.md  REPO_WALKTHROUGH.md  mc_body.html  product search handoff.txt  scratch_fix_tests.py  scratch_replace.py
worker/: .gitignore  pyproject.toml  test_relevance.py
worker/benchmark/: __init__.py  _dump_one.py  criteria.py  fixture_gen.py  pricing.yaml  runner.py
worker/benchmark/fixtures/: 01_small_no_diff.json  02_mixed_capacity.json  03_flags.json  04_diff_full.json  05_kit_and_single.json  (+5 more)
worker/scratch/: ai_filter_test.py  report_out.md  synth_test.py
worker/scripts/: alias_prepass_compare.py  amazon_spike.py  filter_cache_livecheck.py  serper_filter_bakeoff.py  serper_filter_runtest.py  serper_multi_eval.py  serper_spike.py
worker/tests/: conftest.py  test_ai_filter.py  test_alerts.py  test_alterlab_parity.py  test_amazon.py  test_benchmark_criteria.py  test_cli.py  test_display_v2.py  test_filter_backend_config.py  test_filter_backend_selection.py  test_llm_cache.py  test_llm_temperature.py  test_local_box.py  test_openai_wrapper.py  test_phase2.py  test_phase6.py  test_price_sanity.py  test_pricing.py  test_profile.py  test_profile_v2.py  test_profile_v2_filter.py  test_report_json.py  test_report_json_v2.py  test_run_outcome.py  test_run_v2.py  test_run_v2_alerts.py  test_scheduler.py  test_search_url.py  test_selection.py  test_serper.py  test_smoke.py  test_source_reasons.py  test_storage.py  test_synthesizer.py  test_universal_ai.py  test_validators.py  test_vendor_quirks.py
(+751 files in other folders)
