[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "product-search-worker"
version = "0.1.0"
description = "Product search worker — scraper, validator, and synthesizer"
requires-python = ">=3.12"
dependencies = [
    # Phase 1: schema validation
    "pydantic>=2.7",
    "pyyaml>=6.0",
    # Phase 2: HTTP + parsing
    "httpx>=0.27",
    "selectolax>=0.3",
    # Phase 2: LLM providers
    "anthropic>=0.30",
    "openai>=1.30",
    "google-generativeai>=0.7",
    # Phase 4: storage
    "aiosqlite>=0.20",
    # Phase 12d: TLS fingerprint impersonation for the universal_ai adapter
    # so server-rendered storefronts that gate on JA3/HTTP2-fingerprint
    # accept us. Falls back to httpx when not installed.
    "curl-cffi>=0.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
product-search = "product_search.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/product_search"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# google-generativeai has no type stubs; ignore errors in our provider wrapper.
module = "product_search.llm._gemini"
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
